syntax = "proto3";

package user.v1;

// import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/mohamedfawas/quboolkallyanam.xyz/api/proto/user/v1;userpbv1";

service UserService {
    rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
    rpc UpdateUserPartnerPreferences(UpdateUserPartnerPreferencesRequest) returns (UpdateUserPartnerPreferencesResponse);
    rpc RecordMatchAction(RecordMatchActionRequest) returns (RecordMatchActionResponse);
}

message UpdateUserProfileRequest {
    google.protobuf.BoolValue   is_bride                = 1;
    google.protobuf.StringValue full_name               = 2;
    google.protobuf.StringValue date_of_birth           = 3;
    google.protobuf.Int32Value  height_cm               = 4;
    google.protobuf.BoolValue   physically_challenged   = 5;
    google.protobuf.StringValue community               = 6;
    google.protobuf.StringValue marital_status          = 7;
    google.protobuf.StringValue profession              = 8;
    google.protobuf.StringValue profession_type         = 9;
    google.protobuf.StringValue highest_education_level = 10;
    google.protobuf.StringValue home_district           = 11;
}

message UpdateUserProfileResponse {
    google.protobuf.BoolValue success = 1;
}

message UpdateUserPartnerPreferencesRequest {
    google.protobuf.StringValue operation_type = 1;
    google.protobuf.Int32Value  min_age_years = 2;
    google.protobuf.Int32Value  max_age_years = 3;
    google.protobuf.Int32Value  min_height_cm = 4;
    google.protobuf.Int32Value  max_height_cm = 5;
    google.protobuf.BoolValue   accept_physically_challenged = 6;

    // Repeated already supports optional values, so no need wrapper
    repeated string preferred_communities = 7;
    repeated string preferred_marital_status = 8;
    repeated string preferred_professions = 9;
    repeated string preferred_profession_types = 10;
    repeated string preferred_education_levels = 11;
    repeated string preferred_home_districts = 12;
}


message UpdateUserPartnerPreferencesResponse {
    google.protobuf.BoolValue success = 1;
}

message RecordMatchActionRequest {
    string action = 1;
    uint32 target_profile_id = 2;
}

message RecordMatchActionResponse {
    bool success = 1;
}
